--- a/app.json
+++ b/app.json
@@ -11,6 +11,13 @@
         },
         "API_HASH": {
             "description": "Get this value from my.telegram.org! Please do not steal."
+        },
+        "BOT_USERNAME": {
+            "description": "Your bot username without @."            
+        },
+        "OWNER_USERNAME": {
+            "description": "Your Telegram username without @."
+            "value": "Kousei_Assistantbot"
         }
     },
     "buildpacks": [{"url": "heroku/python"}]
